<resources>
    <string name="app_name">My Application</string>
    <string name="textView">Happy Birthday</string>
    <string name="editText">Waiting</string>
    <string name="TeamA">TeamA</string>
    <string name="TeamB">TeamB</string>
    <string name="button3">+3 Button</string>
    <string name="button2">+2 Button</string>
    <string name="button1">+1 Button</string>
    <string name="reset">RESET</string>
    <string name="reset_toast">RESET!</string>

    <string name="title_activity_fullscreen" translatable="false">FullscreenActivity</string>
    <string name="dummy_button" translatable="false">Dummy Button</string>
    <string name="dummy_content" translatable="false">DUMMY\nCONTENT</string>
    <string name="title_activity_path1" translatable="false">Path1Activity</string>
    <string name="title_path">PATH</string>
    <string name="title_community">COMMUNITY</string>
    <string name="title_market">MARKET</string>

    <string name="rateInput">Please input rmb</string>
    <string name="rate_dollar">to dollar</string>
    <string name="rate_euro">to euro</string>
    <string name="rate_won">to won</string>
    <string name="rate_open">open</string>

    <string name="rate_sure">assure</string>

    <string name="follow">FOLLOW</string>
    <string name="top">TOP</string>
    <string name="vicinty">VICINTY</string>
    <string name="rdo_home_lable">HOME</string>
    <string name="rdo_func_lable">FUNC</string>
    <string name="rdo_setting_lable">SETTING</string>

    <string name="footing">footing</string>
    <string name="sprint">sprint</string>
    <string name="marathon">marathon</string>


</resources>
