<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RateActivity">

    <EditText
        android:id="@+id/plin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/rateInput"
        android:textSize="40sp"
        />
    <TextView
        android:id="@+id/rmb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:gravity="center"
        android:textSize="50sp"/>
    <Button
        android:id="@+id/dollar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/rate_dollar"/>
    <Button
        android:id="@+id/euro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/rate_euro"/>
    <Button
        android:id="@+id/won"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/rate_won"/>
    <Button
        android:id="@+id/openone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="openOne"
        android:text="@string/rate_sure"/>

</LinearLayout>