<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FrameActivity">

    <fragment
        android:id="@+id/fragment_main"
        android:name="com.example.asus.myapplication.HomeFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10"></fragment>

    <fragment
        android:id="@+id/fragment_func"
        android:name="com.example.asus.myapplication.FuncFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10"></fragment>

    <fragment
        android:id="@+id/fragment_setting"
        android:name="com.example.asus.myapplication.SettingFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10"></fragment>

    <RadioGroup
        android:id="@+id/bottomGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:orientation="horizontal"
        >
        <RadioButton
            android:id="@+id/radioHome"
            android:text="@string/rdo_home_lable"
            style="@style/rg_btn_style" />
        <RadioButton
            android:id="@+id/radioFunc"
            android:text="@string/rdo_func_lable"
            style="@style/rg_btn_style" />
        <RadioButton
            android:id="@+id/radioSetting"
            android:text="@string/rdo_setting_lable"
            style="@style/rg_btn_style"
            />
    </RadioGroup>

</LinearLayout>