<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main2Activity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="22dp"
                android:text="@string/TeamA"
                android:textAlignment="center"
                android:textSize="36sp"
                app:layout_constraintBottom_toTopOf="@+id/textView4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="21dp"
                android:layout_marginBottom="18dp"
                android:text="0"
                android:textAlignment="center"
                android:textSize="36sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/b3utton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <Button
                android:id="@+id/b3utton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="20dp"
                android:text="@string/button3"
                android:textAlignment="center"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/b2utton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <Button
                android:id="@+id/b2utton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:layout_marginBottom="22dp"
                android:text="@string/button2"
                android:textAlignment="center"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/b1utton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/b3utton" />

            <Button
                android:id="@+id/b1utton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="28dp"
                android:text="@string/button1"
                android:textAlignment="center"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/buttonSet"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/b2utton" />

        </LinearLayout>

        <TextView
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="22dp"
                android:text="@string/TeamB"
                android:textAlignment="center"
                android:textSize="36sp"
                app:layout_constraintBottom_toTopOf="@+id/textView4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView4b"
                android:text="0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="21dp"
                android:layout_marginBottom="18dp"
                android:textAlignment="center"
                android:textSize="36sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/b3utton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <Button
                android:id="@+id/b3uttonb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="20dp"
                android:text="@string/button3"
                android:textAlignment="center"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/b2uttonb"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <Button
                android:id="@+id/b2uttonb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:layout_marginBottom="22dp"
                android:text="@string/button2"
                android:textAlignment="center"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/b1uttonb"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/b3uttonb" />

            <Button
                android:id="@+id/b1uttonb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="28dp"
                android:text="@string/button1"
                android:textAlignment="center"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/buttonSet"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/b2utton" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/buttonSet"
        android:layout_width="wrap_content"
        android:layout_height="58dp"
        android:layout_marginStart="148dp"
        android:layout_marginEnd="148dp"
        android:layout_marginBottom="24dp"
        android:text="@string/reset"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>